# orders-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
orders/: db.sqlite3
orders/main/: settings.py
orders/orders/: urls.py  views.py
orders/orders/templates/: docs.html
src/: db.sqlite3
src/main/: settings.py  urls.py
src/orders/: models.py  views.py
