[tool.poetry]
name = "volnatesttask"
version = "0.1.0"
description = ""
authors = ["Vladislav Novikov <mb1te.comics@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
